# local-stt-diarization

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: README.md  benchmark_notes.md  setup_windows_cuda.md  testing_manual_ru.md  transcript_contract.md  troubleshooting.md  usage.md
examples/: commands.md
scripts/: run_local_stt.bat
src/local_stt_diarization/: __init__.py  align.py  audio.py  cli.py  config.py  diarize.py  exporters.py  merge.py  terminal_ui.py  transcribe.py  transcript_contract.py
tests/: README.md  test_cli.py  test_exporters.py  test_merge.py  test_terminal_ui.py  test_transcript_contract.py
