[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-stt-diarization"
version = "0.1.0"
description = "Standalone local CLI project for transcript-first speech-to-text with optional diarization."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
  { name = "Workspace Owner" }
]
dependencies = [
  "faster-whisper>=1.0.3",
  "whisperx>=3.1.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[project.scripts]
local-stt-diarization = "local_stt_diarization.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
